# CarRace

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  collectable.cpp  collectable.h  config.cpp  config.h  game.cpp  game.h  level.cpp  level.h  main.cpp  player.cpp  player.h  resource.rc  scoreboard.cpp  scoreboard.h  shop.cpp  shop.h  tests.cpp  ui.cpp  ui.h
